--- a/templates/login.html
+++ b/templates/login.html
@@ -45,11 +45,12 @@
                     </div>
                 </div>
                 <hr />
-                <button type="button" class="sign-in-with-google">
+
+                <a  href="" class="sign-in-with-google">
                     <img src="../image/google_logo.svg" alt="Google Logo" />
                     <b>Sign in with Google</b>
-                </button>
-
+                </a>
+    
                 <p class="terms-and-condition"></p>
             </form>
 
