--- a/templates/signup.html
+++ b/templates/signup.html
@@ -41,10 +41,10 @@
 
                 <button type="submit" id="signin">SIGNUP</button>
                 <hr />
-                <button type="button" class="sign-in-with-google">
+                <a href="" class="sign-in-with-google">
                     <img src="../image/google_logo.svg" alt="Google Logo" />
                     <b>Sign in with Google</b>
-                </button>
+                </a>
                 <p class="terms-and-condition">By creating an account, you agree to PictureStock’s <a href="">Terms of Service</a>, and have read and understood the <a href="">Privacy Policy.</a></p>
             </form>
 
