--- a/templates/testing.html
+++ b/templates/testing.html
@@ -1,11 +1,66 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <h1>you are welcome</h1>
-</body>
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+        <title>Document</title>
+    </head>
+    <body>
+        <canvas id="myChart" style="width: 100%; height: 100%;"></canvas>
+        <script>
+            document.addEventListener("DOMContentLoaded", (event) => {
+                var ctx = document.getElementById("myChart").getContext("2d");
+                var gradient = ctx.createLinearGradient(0, 0, 0, 400);
+                gradient.addColorStop(0, "rgba(0,0,0,1)");
+                gradient.addColorStop(0.59, "rgba(157,157,157,0)");
+                gradient.addColorStop(1, "rgba(254,254,254,1)");
+
+                var myChart = new Chart(ctx, {
+                    type: "line",
+                    data: {
+                        labels: ["January", "February", "March", "April", "May", "June", "July"],
+                        datasets: [
+                            {
+                                label: "Sales",
+                                data: [65, 59, 80, 81, 56, 55, 40],
+                                fill: true,
+                                backgroundColor: gradient,
+                                borderColor: "rgba(75, 192, 192, 1)",
+                                borderWidth: 3,
+                                tension: 0.1,
+                            },
+                        ],
+                    },
+                    options: {
+                        scales: {
+                            x: {
+                                grid: {
+                                    display: false,
+                                },
+                            },
+                            y: {
+                                beginAtZero: true,
+                                grid: {
+                                    display: false,
+                                },
+                                ticks: {
+                                    stepSize: 5,
+                                    callback: function (value, index, values) {
+                                        return "₦" + value;
+                                    },
+                                    color: "rgba(0, 0, 0, 0.8)",
+                                    font: {
+                                        size: 14,
+                                        family: "Arial",
+                                        weight: "bold",
+                                    },
+                                },
+                            },
+                        },
+                    },
+                });
+            });
+        </script>
+    </body>
 </html>
