--- a/templates/home.html
+++ b/templates/home.html
@@ -34,7 +34,7 @@
             <main>
                 <div class="chart">
                     <div class="income-stats">
-                        <canvas id="myChart" height="40vh" width="50vw">
+                        <canvas id="myChart">
                             
                         </canvas>
                     </div>
