--- a/templates/landing.html
+++ b/templates/landing.html
@@ -18,7 +18,7 @@
                 <span class="menu-links">
                     <li><a href="./home.html">SHOP</a></li>
                     <li><a href="">BLOG</a></li>
-                    <li><a href="">ABOUT</a></li>
+                    <li><a href="./about.html">ABOUT</a></li>
                 </span>
 
                 <span class="menu-logins">
