--- a/styles/about.css
+++ b/styles/about.css
@@ -21,6 +21,10 @@
 }
 
 /* ABOUT SECTION MISSION SECTION */
+.mission-section > h1 {
+    margin-top: 25px;
+    text-align: center;
+}
 .mission-section-item {
     display: flex;
     justify-content: center;
@@ -40,14 +44,14 @@
 }
 .mission-section-item-text {
     width: 45%;
-    min-width: 450px;
+    min-width: 400px;
     font-size: 20px;
 }
 .mission-section-item-text h2 {
     font-family: Gabriela Stencil W00 Bold, sans-serif;
     margin: 10px 0;
 }
-@media screen and (max-width: 731px) {
+@media screen and (max-width: 741px) {
     .mission-section-item-text {
         width: 80%;
         min-width: 80%;
@@ -58,5 +62,12 @@
     }
     .mission-section-item-image {
         margin-right: 3px;
+    }
+    /* REARRANGING THE ORDER OF MISSION ITEM */
+    .item-two .mission-section-item-image{
+        order: 1;
+    }
+    .item-two .mission-section-item-text{
+        order: 2;
     }
 }
