--- a/templates/about.html
+++ b/templates/about.html
@@ -50,8 +50,9 @@
         <!-- MISSION SECTION -->
         <section class="mission-section">
             <h1>OUR MISSION</h1>
+
             <!-- MISSION SECTION ITEM ONE -->
-            <div class="mission-section-item">
+            <div class="mission-section-item item-one">
                 <div class="mission-section-item-image">
                     <img src="../image/about_page_images/Ellipse 22.png" alt="" />
                 </div>
@@ -68,7 +69,7 @@
             </div>
 
             <!-- MISSION SECTION ITEM TWO -->
-            <div class="mission-section-item">
+            <div class="mission-section-item item-two">
                 <div class="mission-section-item-text">
                     <h2>Personalized Gallery</h2>
                     <p>
@@ -83,8 +84,9 @@
                     <img src="../image/about_page_images/mission-cover-face.png" alt="" />
                 </div>
             </div>
-            <div class="mission-section-item">
-                <!-- MISSION SECTION ITEM THREE -->
+
+            <!-- MISSION SECTION ITEM THREE -->
+            <div class="mission-section-item item-three">
                 <div class="mission-section-item-image">
                     <img src="../image/about_page_images/lady-with-camera.png" alt="" />
                 </div>
