--- a/templates/about.html
+++ b/templates/about.html
@@ -47,7 +47,6 @@
             <p>About PictureStock</p>
         </section>
 
-        <!-- MISSION SECTION -->
         <section class="mission-section">
             <h1>OUR MISSION</h1>
 
@@ -100,6 +99,23 @@
                         solo santos diam.
                     </p>
                 </div>
+            </div>
+        </section>
+        <section class="why-us">
+            <div class="why-us-item">
+                <div class="image"><img src="../image/Icons/location.svg" alt="" /></div>
+                <h2>Nigeria</h2>
+                <p>Made by Nigerians for Nigerians</p>
+            </div>
+            <div class="why-us-item">
+                <div class="image"><img src="../image/Icons/photos_logo.svg" alt="" /></div>
+                <h2>120, 000+ Photos</h2>
+                <p>Trusted by well-renowned photographers</p>
+            </div>
+            <div class="why-us-item">
+                <div class="image"><img src="../image/Icons/image_icon.svg" alt="" /></div>
+                <h2>5,000+ collections</h2>
+                <p>Unlimited collections at your disposal</p>
             </div>
         </section>
     </body>
