--- a/templates/about.html
+++ b/templates/about.html
@@ -10,7 +10,6 @@
     </head>
     <body>
         <!-- NAVIGATION SECTION -->
-
         <nav>
             <div><img src="../image/logoAndtext.svg" alt="" id="logo" loading="lazy" /></div>
             <input type="checkbox" id="toggle-menu" />
@@ -47,6 +46,7 @@
             <p>About PictureStock</p>
         </section>
 
+        <!-- MISSION SECTION -->
         <section class="mission-section">
             <h1>OUR MISSION</h1>
 
@@ -101,6 +101,9 @@
                 </div>
             </div>
         </section>
+
+        <!-- WHY US SECTION  -->
+        <!-- I just decided to give it that name why-us -->
         <section class="why-us">
             <div class="why-us-item">
                 <div class="image"><img src="../image/Icons/location.svg" alt="" /></div>
@@ -116,6 +119,18 @@
                 <div class="image"><img src="../image/Icons/image_icon.svg" alt="" /></div>
                 <h2>5,000+ collections</h2>
                 <p>Unlimited collections at your disposal</p>
+            </div>
+        </section>
+        <section class="meet-the-team">
+            <div class="overlay">
+                <h2>MEET THE TEAM</h2>
+                <p>
+                    Lorem ipsum dolor, duet solo santos diam jando Lorem ipsum dolor, duet solo
+                    santos diam jandoLorem ipsum dolor, duet solo santos diam jandoLorem ipsum
+                    dolor, duet solo santos diam jandoLorem ipsum dolor, duet solo santos diam jando
+                    Lorem ipsum dolor, duet solo santos diam jando Lorem ipsum dolor, duet solo
+                    santos diam.
+                </p>
             </div>
         </section>
     </body>
