--- a/templates/landing.html
+++ b/templates/landing.html
@@ -17,7 +17,7 @@
                 <label for="toggle-menu" id="close-menu"><img src="../image/Icons/close_24dp_FILL0_wght400_GRAD0_opsz24.svg" alt="" /></label>
                 <span class="menu-links">
                     <li><a href="./home.html">SHOP</a></li>
-                    <li><a href="">BLOG</a></li>
+                    <li><a href="../templates/landing.html">BLOG</a></li>
                     <li><a href="./about.html">ABOUT</a></li>
                 </span>
 
@@ -142,6 +142,8 @@
                 </div>
             </div>
         </section>
+
+        FOOTER SECTION
         <footer>
             <ul>
                 <h1>SHOP</h1>
