--- a/templates/about.html
+++ b/templates/about.html
@@ -11,7 +11,7 @@
     <body>
         <!-- NAVIGATION SECTION -->
         <nav>
-            <div><img src="../image/logoAndtext.svg" alt="" id="logo" loading="lazy" /></div>
+           <div><img src="../image/logoAndtext.svg" alt="" id="logo" loading="lazy" /></div>
             <input type="checkbox" id="toggle-menu" />
             <ul>
                 <label for="toggle-menu" id="close-menu">
@@ -19,7 +19,7 @@
                 </label>
                 <span class="menu-links">
                     <li><a href="./home.html">SHOP</a></li>
-                    <li><a href="">BLOG</a></li>
+                    <li><a href="../templates/landing.html">BLOG</a></li>
                     <li><a href="#">ABOUT</a></li>
                 </span>
 
@@ -121,6 +121,8 @@
                 <p>Unlimited collections at your disposal</p>
             </div>
         </section>
+
+        <!-- MEET THE TEAM SECTION -->
         <section class="meet-the-team">
             <div class="overlay">
                 <h2>MEET THE TEAM</h2>
@@ -133,5 +135,75 @@
                 </p>
             </div>
         </section>
+
+        <!-- SUBSCRIBE SECTION -->
+        <section class="subscribe-section">
+            <div class="subscribe-text">
+                <h2>
+                    Don’t wanna miss out
+                    <br />
+                    on any action?
+                </h2>
+                <p>Subscribe to our newsletter to keep up with all the new updates.</p>
+            </div>
+            <form action="" class="subscribe-form">
+                <input
+                    type="text"
+                    id="subscriber-first-name"
+                    name="subscriber-first-name"
+                    placeholder="First Name"
+                />
+                <input
+                    type="text"
+                    id="subscriber-last-name"
+                    name="subscriber-last-name"
+                    placeholder="Last Name"
+                />
+                <input type="email" id="subscriber-email" placeholder="Email" />
+                <button>Subscribe</button>
+            </form>
+        </section>
+        <footer>
+            <ul>
+                <h1>SHOP</h1>
+                <li><a href="">Store</a></li>
+                <li><a href="">Gallery</a></li>
+                <li><a href="">Personalized Gallery</a></li>
+                <li><a href="">Swift Order</a></li>
+                <li><a href="">Bulk Order</a></li>
+            </ul>
+            <ul>
+                <h1>RESOURCES</h1>
+                <li><a href="">Examples</a></li>
+                <li><a href="">Help & Support</a></li>
+                <li><a href="">Service Status</a></li>
+                <li><a href="">PictureStock Blog</a></li>
+                <li><a href="">Personalized Site</a></li>
+            </ul>
+            <ul>
+                <h1>COMPANY</h1>
+                <li><a href="">About Us</a></li>
+                <li><a href="">Careers</a></li>
+                <li><a href="">Terms of Service</a></li>
+                <li><a href="">Privacy Policy</a></li>
+                <li><a href="">Licensing</a></li>
+            </ul>
+            <div>
+                <div class="footer-logo">
+                    <img src="../image/Icons/whiteLogo.svg" alt="" />
+                </div>
+                <p>
+                    Your one-stop shop for everything photography. Think Photos, Think PictureStock.
+                </p>
+                <h2>SOCIAL MEDIA</h2>
+                <div class="socials">
+                    <img src="../image/Icons/Container.svg" alt="" />
+                    <img src="../image/Icons/Container-1.svg" alt="" />
+                    <img src="../image/Icons/Container-2.svg" alt="" />
+                    <img src="../image/Icons/Container-3.svg" alt="" />
+                    <img src="" alt="" />
+                </div>
+            </div>
+        </footer>
     </body>
 </html>
