increasing the top

--- a/templates/home.html
+++ b/templates/home.html
@@ -27,6 +27,7 @@
         <!-- THE MAIN CONTENT -->
         <main class="home-main-content">
 
+
             <!-- THIS SECTION CONTAIN ALL THE GRAPH -->
             <div class="home-graph">
 
@@ -53,6 +54,28 @@
                         <button>All Time</button>
                     </div>
                    
+                </div>
+            </div>
+            <div class="sales">
+                <div class="sales-items">
+                    <h1>₦100,000</h1>
+                    <p>Total Sales</p>
+                </div>
+                <div class="sales-items">
+                    <h1>₦70,000</h1>
+                    <p>Available Balance</p>
+                </div>
+                <div class="sales-items">
+                    <h1>₦32,600</h1>
+                    <p>Pending Clearance</p>
+                </div>
+                <div class="sales-items">
+                    <h1>₦7,875</h1>
+                    <p>Pictures</p>
+                </div>
+                <div class="sales-items">
+                    <h1>₦6,456</h1>
+                    <p>Pictures Sold</p>
                 </div>
             </div>
         </main>
