--- a/styles/home.css
+++ b/styles/home.css
@@ -16,21 +16,23 @@
 .home-nav-bar {
     grid-column: 1 / -1;
 }
-.home-content-container * {
+/* .home-content-container * {
     border: 1px solid rgb(0, 0, 0);
-}
+} */
 
 /* HOME GRAPH */
 .home-graph {
     display: flex;
     height: 312px;
     margin-top: 40px;
+    gap: 20px;
 }
 
 .home-graph-container,
 .home-doughnut-container {
     position: relative;
-    width: 50%;
+    width: 47%;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 }
 
 /* DOUGHNUT */
@@ -45,6 +47,7 @@
     justify-content: flex-end;
     width: 100%;
 }
+
 .line-graph-button button {
     padding: 2px 10px;
     margin: 0 6px;
@@ -63,6 +66,27 @@
     padding: 2px 7px;
     border-radius: 10px;
     border: 1px solid black;
+}
+.sales{
+    display: flex;
+    gap: 10px;
+    justify-content: center;
+    padding: 0 20px;
+    flex-wrap: wrap;
+
+    
+}
+.sales-items{
+    margin-top: 10px;
+    width: 18%;
+    height: 80px;
+    min-width: 150px;
+    flex-grow: 1;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 }
 @media screen and (max-width: 1000px) {
     .home-content-container {
@@ -96,6 +120,6 @@
         flex-direction: row;
     }
     .line-graph-button {
-        top: -40%;
+        top: -26%;
     }
 }
