--- a/templates/home.html
+++ b/templates/home.html
@@ -17,16 +17,29 @@
 
         <!-- THE NAVE BAR -->
         <nav class="home-nav-bar">
-            home-nav-bar
+            <div class="home-logo">
+                <img src="../image/Icons/whiteLogo.svg" alt="">
+            </div>
+            <div class="user-features">
+                <div><img src="../image/Icons/nortification.svg" alt=""></div>
+                <div><img src="../image/Icons/UserLogin.svg" alt=""></div>
+                <p>Hi, Shawn</p>
+
+            </div>
         </nav>
 
         <!-- THE SIDE BAR -->
-        <aside home-side-bar>
+        <aside class="home-side-bar">
+            <p><a href="">OVERVIEW</a></p>
+            <p><a href="">GALLERY</a></p>
+            <p><a href="">ORDERS</a></p>
+            <p><a href="">WITHDRAWALS</a></p>
+            <p><a href="">PROFILE</a></p>
+            <p><a href="">BLOG</a></p>
         </aside>
 
         <!-- THE MAIN CONTENT -->
         <main class="home-main-content">
-
 
             <!-- THIS SECTION CONTAIN ALL THE GRAPH -->
             <div class="home-graph">
@@ -53,9 +66,11 @@
                         <button>Year</button>
                         <button>All Time</button>
                     </div>
-                   
+
                 </div>
             </div>
+
+            <!-- SALES -->
             <div class="sales">
                 <div class="sales-items">
                     <h1>₦100,000</h1>
@@ -76,6 +91,26 @@
                 <div class="sales-items">
                     <h1>₦6,456</h1>
                     <p>Pictures Sold</p>
+                </div>
+            </div>
+            <div class="post-picture">
+                <div class="post-picture-items">
+                    <div class="image"><img src="../image/about_page_images/1_1UWljcT2mmBD1J1DU6I3AA@2x.jpg" alt="">
+                    </div>
+                    <div class="text-content">
+                        <p>Popular Picture</p>
+                        <h1>1,356,678,325</h1>
+                        <p>Total Sales</p>
+                    </div>
+
+                </div>
+                <div class="post-picture-items">
+                    <div class="image"><img src="../image/about_page_images/lady-with-camera.png" alt=""></div>
+                    <div class="text-content">
+                        <p>Popular Blog Post</p>
+                        <h1>1,356,678,325</h1>
+                        <p>Total view</p>
+                    </div>
                 </div>
             </div>
         </main>
