--- a/styles/home.css
+++ b/styles/home.css
@@ -12,22 +12,74 @@
     grid-template-columns: 320px auto;
     grid-template-rows: 64px auto;
     height: 100vh;
+    transition: .8s;
+
 }
+/* NAVIGATION BAR */
+.home-nav-bar {
+    background-color: black;
+    display: flex;
+    justify-content: space-between;
+    color: white;
+    align-items: center;
+    padding: 0 30px;
+}
+.user-features {
+    display: flex;
+    align-items: center;
+    column-gap: 15px;
+}
+
+/* HOME SIDE BAR */
+.home-side-bar {
+    padding-top: 40px;
+    background-color: black;
+    color: white;
+}
+.home-side-bar a {
+    color: rgb(204, 10, 10);
+    text-decoration: none;
+    padding: 13px 0;
+    display: block;
+    text-align: center;
+    font-weight: 500;
+    width: 80%;
+    margin: 0 auto;
+    border-radius: 6px;
+}
+.home-side-bar p:nth-child(1) a {
+    background-color: white;
+    color: rgb(0, 0, 0);
+}
+
 .home-nav-bar {
     grid-column: 1 / -1;
 }
-/* .home-content-container * {
-    border: 1px solid rgb(0, 0, 0);
-} */
 
 /* HOME GRAPH */
 .home-graph {
     display: flex;
     height: 312px;
+    margin-left: 20px;
     margin-top: 40px;
     gap: 20px;
 }
-
+/* HOME GENERAL STYLING */
+.home-graph > div,
+.sales > div,
+.post-picture > div {
+    border-radius: 8px;
+}
+.home-content-container button {
+    transition: 0.7s;
+}
+.home-content-container button:hover {
+    background-color: black;
+    color: white;
+}
+.home-content-container h1 {
+    font-size: 24px;
+}
 .home-graph-container,
 .home-doughnut-container {
     position: relative;
@@ -49,7 +101,7 @@
 }
 
 .line-graph-button button {
-    padding: 2px 10px;
+    padding: 6px 12px;
     margin: 0 6px;
     border-radius: 13px;
     border: 1px solid black;
@@ -63,20 +115,17 @@
 }
 .doughnut-chart-button button {
     margin: 5px 4px;
-    padding: 2px 7px;
+    padding: 4px 12px;
     border-radius: 10px;
     border: 1px solid black;
 }
-.sales{
+.sales {
     display: flex;
     gap: 10px;
     justify-content: center;
-    padding: 0 20px;
     flex-wrap: wrap;
-
-    
 }
-.sales-items{
+.sales-items {
     margin-top: 10px;
     width: 18%;
     height: 80px;
@@ -88,12 +137,59 @@
     align-items: center;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 }
+.post-picture {
+    display: flex;
+    flex-wrap: wrap;
+}
+.post-picture-items {
+    flex: 1;
+    display: flex;
+    align-items: center;
+    gap: 20px;
+    padding: 15px;
+    min-width: 140px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+}
+.post-picture-items .image {
+    width: 88px;
+    overflow: hidden;
+    border-radius: 50%;
+    height: 88px;
+}
+.post-picture .image img {
+    width: 100%;
+}
+@media screen and (max-width: 1400px){
+        .doughnut-chart-button {
+        flex-direction: row;
+    }
+}
 @media screen and (max-width: 1000px) {
     .home-content-container {
         grid-template-columns: 0 auto;
     }
+    .home-logo {
+        width: 130px;
+    }
+    .home-logo img {
+        width: 100%;
+    }
+    .home-side-bar {
+        opacity: 0;
+    }
+    .doughnut-chart-button {
+
+        flex-direction: row;
+    }
+    
 }
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 650px) {
+    .home-nav-bar {
+        padding: 0 10px;
+    }
+    .user-features {
+        column-gap: 1px;
+    }
     .home-graph {
         flex-direction: column;
     }
@@ -111,6 +207,7 @@
     }
     .home-graph {
         height: 90vh;
+        display: none;
     }
     .line-graph-button {
         justify-content: center;
@@ -122,7 +219,30 @@
     .line-graph-button {
         top: -26%;
     }
-    .sales{
-        margin-top: -100px;
+
+    .sales-items {
+        width: 80%;
+        height: 80px;
+        min-width: 80%;
+        justify-content: center;
+        margin: 0 auto;
+    }
+    .sales {
+        flex-direction: column;
+    }
+    .post-picture {
+        flex-direction: column;
+    }
+    .post-picture-items {
+        min-width: auto;
+        width: 80%;
+        margin: 0 auto;
+    }
+    .home-main-content h1 {
+        font-size: 20px;
+    }
+    .post-picture-items .image {
+        width: 48px;
+        height: 48px;
     }
 }
