--- a/templates/home.html
+++ b/templates/home.html
@@ -17,9 +17,12 @@
 
         <!-- THE NAVE BAR -->
         <nav class="home-nav-bar">
-            <div class="home-logo">
-                <img src="../image/Icons/whiteLogo.svg" alt="">
+            <div class="home-logo-menu-icon">
+
+                <div class="home-toggle-menu"><img src="../image/Icons/home_toggle_menu.svg" alt="" loading="lazy" /></div>
+               <a href="./landing.html"> <div><img src="../image/Icons/whiteLogo.svg" alt=""></div></a>
             </div>
+
             <div class="user-features">
                 <div><img src="../image/Icons/nortification.svg" alt=""></div>
                 <div><img src="../image/Icons/UserLogin.svg" alt=""></div>
@@ -37,6 +40,14 @@
             <p><a href="">PROFILE</a></p>
             <p><a href="">BLOG</a></p>
         </aside>
+            <aside class="home-menu-bar">
+                <p><a href="">OVERVIEW</a></p>
+                <p><a href="">GALLERY</a></p>
+                <p><a href="">ORDERS</a></p>
+                <p><a href="">WITHDRAWALS</a></p>
+                <p><a href="">PROFILE</a></p>
+                <p><a href="">BLOG</a></p>
+            </aside>
 
         <!-- THE MAIN CONTENT -->
         <main class="home-main-content">
