--- a/styles/home.css
+++ b/styles/home.css
@@ -12,8 +12,8 @@
     grid-template-columns: 320px auto;
     grid-template-rows: 64px auto;
     height: 100vh;
-    transition: .8s;
-
+    transition: 0.8s;
+    position: relative;
 }
 /* NAVIGATION BAR */
 .home-nav-bar {
@@ -23,6 +23,15 @@
     color: white;
     align-items: center;
     padding: 0 30px;
+    z-index: 21;
+}
+.home-logo-menu-icon {
+    display: flex;
+    align-items: center;
+    column-gap: 20px;
+}
+.home-toggle-menu {
+    display: none;
 }
 .user-features {
     display: flex;
@@ -36,7 +45,8 @@
     background-color: black;
     color: white;
 }
-.home-side-bar a {
+.home-side-bar a,
+.home-menu-bar a {
     color: rgb(255, 255, 255);
     text-decoration: none;
     padding: 13px 0;
@@ -47,6 +57,7 @@
     margin: 0 auto;
     border-radius: 6px;
 }
+.home-menu-bar p:nth-child(1) a,
 .home-side-bar p:nth-child(1) a {
     background-color: white;
     color: rgb(0, 0, 0);
@@ -54,6 +65,18 @@
 
 .home-nav-bar {
     grid-column: 1 / -1;
+}
+.home-menu-bar {
+    position: absolute;
+    top: 8%;
+    background-color: rgb(0, 0, 0);
+    width: 270px;
+    bottom: 0;
+    top: 0;
+    left: -100%;
+    padding: 20px 0;
+    padding-top: 100px;
+    z-index: 20;
 }
 
 /* HOME GRAPH */
@@ -159,8 +182,8 @@
 .post-picture .image img {
     width: 100%;
 }
-@media screen and (max-width: 1400px){
-        .doughnut-chart-button {
+@media screen and (max-width: 1400px) {
+    .doughnut-chart-button {
         flex-direction: row;
     }
 }
@@ -178,10 +201,14 @@
         opacity: 0;
     }
     .doughnut-chart-button {
-
         flex-direction: row;
     }
-    
+    .home-toggle-menu {
+        display: block;
+    }
+    .show-menu{
+        left: 100%;
+    }
 }
 @media screen and (max-width: 650px) {
     .home-nav-bar {
