--- a/styles/home.css
+++ b/styles/home.css
@@ -39,7 +39,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    column-gap: 7px;
+    column-gap: 13px;
 }
 .home-toggle-menu {
     display: none;
@@ -78,12 +78,12 @@
     grid-column: 1 / -1;
 }
 .home-menu-bar {
-    position: absolute;
+    position: fixed;
     top: 8%;
     background-color: rgb(0, 0, 0);
     width: 270px;
-    bottom: 0;
     top: 0;
+    bottom: 0;
     left: -100%;
     padding: 20px 0;
     padding-top: 100px;
@@ -202,6 +202,13 @@
 @media screen and (max-width: 1000px) {
     .home-content-container {
         grid-template-columns: 0 auto;
+    }
+    .home-nav-bar{
+        position: fixed;
+        top: 0;
+        left: 0;
+        right: 0;
+
     }
     .home-logo {
         width: 30vw;
