--- a/templates/home.html
+++ b/templates/home.html
@@ -31,8 +31,8 @@
 
             <div class="user-features">
                 <div><img src="../image/Icons/nortification.svg" alt=""></div>
-                <div><img src="../image/Icons/UserLogin.svg" alt=""></div>
-                <p>Hi, Shawn</p>
+                <div class='user-logo'><img src="../image/Icons/UserLogin.svg" alt=""></div>
+                <p class="username">Hi, Shawn</p>
 
             </div>
         </nav>
@@ -46,13 +46,20 @@
             <p><a href="">PROFILE</a></p>
             <p><a href="">BLOG</a></p>
         </aside>
+        
         <aside class="home-menu-bar" id="menu">
-            <p><a href="">OVERVIEW</a></p>
-            <p><a href="">GALLERY</a></p>
-            <p><a href="">ORDERS</a></p>
-            <p><a href="">WITHDRAWALS</a></p>
-            <p><a href="">PROFILE</a></p>
-            <p><a href="">BLOG</a></p>
+            <div>
+                <p><a href="">OVERVIEW</a></p>
+                <p><a href="">GALLERY</a></p>
+                <p><a href="">ORDERS</a></p>
+                <p><a href="">WITHDRAWALS</a></p>
+                <p><a href="">PROFILE</a></p>
+                <p><a href="">BLOG</a></p>
+            </div>
+            <div class="user-features user-feature-small-screen">
+                <div><img src="../image/Icons/UserLogin.svg" alt=""></div>
+                <p class="username-small-screen">Hi, Shawn</p>
+            </div>
         </aside>
 
         <!-- THE MAIN CONTENT -->
