--- a/templates/home.html
+++ b/templates/home.html
@@ -31,7 +31,9 @@
 
             <div class="user-features">
                 <div><img src="../image/Icons/nortification.svg" alt=""></div>
-                <div class='user-logo'><img src="../image/Icons/UserLogin.svg" alt=""></div>
+                <div class='user-logo'>
+                    <img src="../image/about_page_images/1_1UWljcT2mmBD1J1DU6I3AA@2x.jpg" alt="">
+                </div>
                 <p class="username">Hi, Shawn</p>
 
             </div>
@@ -50,12 +52,13 @@
         <aside class="home-menu-bar" id="menu">
             <div>
                 <p><a href="">OVERVIEW</a></p>
-                <p><a href="">GALLERY</a></p>
-                <p><a href="">ORDERS</a></p>
-                <p><a href="">WITHDRAWALS</a></p>
-                <p><a href="">PROFILE</a></p>
-                <p><a href="">BLOG</a></p>
+                <p><a href="./404.html">GALLERY</a></p>
+                <p><a href="./404.html">ORDERS</a></p>
+                <p><a href="./404.html">WITHDRAWALS</a></p>
+                <p><a href="./404.html">PROFILE</a></p>
+                <p><a href="./404.html">BLOG</a></p>
             </div>
+
             <div class="user-features user-feature-small-screen">
                 <div><img src="../image/Icons/UserLogin.svg" alt=""></div>
                 <p class="username-small-screen">Hi, Shawn</p>
@@ -117,6 +120,7 @@
                     <p>Pictures Sold</p>
                 </div>
             </div>
+
             <div class="post-picture">
                 <div class="post-picture-items">
                     <div class="image"><img src="../image/about_page_images/1_1UWljcT2mmBD1J1DU6I3AA@2x.jpg" alt="">
