Changing the 404 logo

--- a/templates/404.html
+++ b/templates/404.html
@@ -13,7 +13,7 @@
 <body>
     <!-- NAVIGATION SECTION -->
     <nav>
-        <div><img src="../image/logoAndtext.svg" alt="" id="logo" loading="lazy" /></div>
+        <div><img src="../image/Icons/whiteLogo.svg" alt="" id="logo" loading="lazy" /></div>
         <input type="checkbox" id="toggle-menu" />
         <ul>
             <label for="toggle-menu" id="close-menu"><img src="../image/Icons/close_24dp_FILL0_wght400_GRAD0_opsz24.svg"
