--- a/templates/home.html
+++ b/templates/home.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-<div class="overlay"></div>
+    <div class="overlay"></div>
     <!-- GRID CONTAINER TO LAYOUT THE CONTENT -->
     <div class="home-content-container">
 
@@ -41,14 +41,14 @@
 
         <!-- THE SIDE BAR -->
         <aside class="home-side-bar">
-            <p><a href="">OVERVIEW</a></p>
-            <p><a href="">GALLERY</a></p>
-            <p><a href="">ORDERS</a></p>
-            <p><a href="">WITHDRAWALS</a></p>
-            <p><a href="">PROFILE</a></p>
-            <p><a href="">BLOG</a></p>
+            <p><a href="./404.html">OVERVIEW</a></p>
+            <p><a href="./404.html">GALLERY</a></p>
+            <p><a href="./404.html">ORDERS</a></p>
+            <p><a href="./404.html">WITHDRAWALS</a></p>
+            <p><a href="./404.html">PROFILE</a></p>
+            <p><a href="./404.html./404.html">BLOG</a></p>
         </aside>
-        
+
         <aside class="home-menu-bar" id="menu">
             <div>
                 <p><a href="">OVERVIEW</a></p>
