--- a/templates/home.html
+++ b/templates/home.html
@@ -42,7 +42,7 @@
         <!-- THE SIDE BAR -->
         <aside class="home-side-bar">
             <p><a href="./404.html">OVERVIEW</a></p>
-            <p><a href="./404.html">GALLERY</a></p>
+            <p><a href="./gallery.html">GALLERY</a></p>
             <p><a href="./404.html">ORDERS</a></p>
             <p><a href="./404.html">WITHDRAWALS</a></p>
             <p><a href="./404.html">PROFILE</a></p>
@@ -52,7 +52,7 @@
         <aside class="home-menu-bar" id="menu">
             <div>
                 <p><a href="">OVERVIEW</a></p>
-                <p><a href="./404.html">GALLERY</a></p>
+                <p><a href="./gallery.html">GALLERY</a></p>
                 <p><a href="./404.html">ORDERS</a></p>
                 <p><a href="./404.html">WITHDRAWALS</a></p>
                 <p><a href="./404.html">PROFILE</a></p>
