--- a/styles/gallery.css
+++ b/styles/gallery.css
@@ -1,14 +1,32 @@
-.home-content-container{
+/** @format */
+
+.home-content-container {
     overflow: hidden;
 }
-.home-main-content{
+
+.home-main-content {
     overflow-y: scroll;
     overflow-x: hidden;
 }
 
+/* GALLERY BOX AND ITS PICTURE */
+.gallery-container{
+    display: flex;
+    flex-wrap: wrap;
+    gap: 20px;
+    justify-content: center;
+}
+.gallery-picture{
+    width: 192px;
+    height: 192px;
+    border-radius: 8px 0px 0px 0px;
+}
+.gallery-picture img{
+    width: 100%;
+}
+
 @media screen and (max-width: 1000px) {
-    .home-content-container{
+    .home-content-container {
         grid-template-rows: 100vh 656.007px;
     }
-    
 }
