--- a/styles/gallery.css
+++ b/styles/gallery.css
@@ -7,26 +7,68 @@
 .home-main-content {
     overflow-y: scroll;
     overflow-x: hidden;
+    display: flex;
+    justify-content: space-between;
+}
+
+.gallery-filter-and-search {
+    width: 30%;
+    background-color: rgb(191, 190, 190);
 }
 
 /* GALLERY BOX AND ITS PICTURE */
-.gallery-container{
-    display: flex;
-    flex-wrap: wrap;
-    gap: 20px;
-    justify-content: center;
+.gallery-container {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    width: 50%;
+    gap: 10px;
+    flex: 1;
+    padding: 0 20px;
 }
-.gallery-picture{
-    width: 192px;
+
+.gallery-picture {
     height: 192px;
-    border-radius: 8px 0px 0px 0px;
+    position: relative;
 }
-.gallery-picture img{
+
+.price-and-name{
+    position: absolute;
+    bottom: 20px;
+    color: white;
+}
+
+.price-and-name p{
+    font-size: 12px;
+}
+
+.gallery-picture img {
     width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 10px;
 }
+
 
 @media screen and (max-width: 1000px) {
     .home-content-container {
         grid-template-rows: 100vh 656.007px;
+    }
+}
+
+@media screen and (max-width: 849px) {
+    .home-main-content{
+        flex-direction: column;
+    }
+    .gallery-container{
+        width: 100%;
+    }
+    .gallery-container{
+        grid-template-columns: 1fr 1fr;
+    }
+}
+
+@media screen and (max-width: 400px) {
+        .gallery-container{
+        grid-template-columns: 1fr;
     }
 }
