--- a/templates/gallery.html
+++ b/templates/gallery.html
@@ -44,7 +44,6 @@
         <aside class="home-side-bar">
             <p><a href="./404.html">OVERVIEW</a></p>
             <p><a href="./gallery.html">GALLERY</a></p>
-            <p><a href="./gallery.html">GALLERY</a></p>
             <p><a href="./404.html">ORDERS</a></p>
             <p><a href="./404.html">WITHDRAWALS</a></p>
             <p><a href="./404.html">PROFILE</a></p>
@@ -71,7 +70,9 @@
         <main class="home-main-content">
             <div class='gallery-container'>
             </div>
-            <div class='gallery-filter-and-search'></div>
+            <div class='gallery-filter-and-search'>
+                <h1>I am complete</h1>
+            </div>
         </main>
     </div>
 
